exploring serialization features

--- a/Ultramarine.Generators.Serialization.Providers/Ultramarine.Generators.Serialization.Providers.csproj
+++ b/Ultramarine.Generators.Serialization.Providers/Ultramarine.Generators.Serialization.Providers.csproj
@@ -9,6 +9,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ultramarine.Generators.LanguageDefinitions\Ultramarine.Generators.LanguageDefinitions.csproj" />
+    <ProjectReference Include="..\Ultramarine.Generators.Serialization.Contracts\Ultramarine.Generators.Serialization.Contracts.csproj" />
+    <ProjectReference Include="..\Ultramarine.Generators.Serialization\Ultramarine.Generators.Serialization.csproj" />
+    <ProjectReference Include="..\Ultramarine.Generators.Task.Library\Ultramarine.Generators.Task.Library.csproj" />
   </ItemGroup>
 
 </Project>
