--- a/Ultramarine.Generators.Task.Library/Ultramarine.Generators.Task.Library.csproj
+++ b/Ultramarine.Generators.Task.Library/Ultramarine.Generators.Task.Library.csproj
@@ -7,4 +7,8 @@
     <DelaySign>false</DelaySign>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ultramarine.Generators.LanguageDefinitions\Ultramarine.Generators.LanguageDefinitions.csproj" />
+  </ItemGroup>
+
 </Project>
