sample condition visitor

--- a/Ultramarine.QueryLanguage.Tests/Ultramarine.QueryLanguage.Tests.csproj
+++ b/Ultramarine.QueryLanguage.Tests/Ultramarine.QueryLanguage.Tests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ultramarine.QueryLanguage.Grammars\Ultramarine.QueryLanguage.Grammars.csproj" />
+    <ProjectReference Include="..\Ultramarine.QueryLanguage\Ultramarine.QueryLanguage.csproj" />
   </ItemGroup>
 
 </Project>
