JsonSerializer improvements + Tasks compositions (ability to load tasks from anywhere - for example from nuget package attached to solution :sunglasses:)

--- a/Ultramarine.Generators.Tasks.Library/Ultramarine.Generators.Tasks.Library.csproj
+++ b/Ultramarine.Generators.Tasks.Library/Ultramarine.Generators.Tasks.Library.csproj
@@ -5,7 +5,12 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
+    <AssemblyName>Ultramarine.Generators.Tasks.Contracts</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Ultramarine.Generators.LanguageDefinitions\Ultramarine.Generators.LanguageDefinitions.csproj" />
