workspace abstractions + task execution contexts

--- a/Ultramarine.Generators.Tasks.Library/Ultramarine.Generators.Tasks.Library.csproj
+++ b/Ultramarine.Generators.Tasks.Library/Ultramarine.Generators.Tasks.Library.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ultramarine.Generators.LanguageDefinitions\Ultramarine.Generators.LanguageDefinitions.csproj" />
+    <ProjectReference Include="..\Ultramarine.Workspaces\Ultramarine.Workspaces.csproj" />
   </ItemGroup>
 
 </Project>
