--- a/Ultramarine.Generators.Serialization.Providers/Ultramarine.Generators.Serialization.Providers.csproj
+++ b/Ultramarine.Generators.Serialization.Providers/Ultramarine.Generators.Serialization.Providers.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="System.Composition" Version="1.0.31" />
   </ItemGroup>
 
   <ItemGroup>
