--- a/Ultramarine.Workspaces/Ultramarine.Workspaces.csproj
+++ b/Ultramarine.Workspaces/Ultramarine.Workspaces.csproj
@@ -7,4 +7,8 @@
     <DelaySign>false</DelaySign>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Composition" Version="1.0.31" />
+  </ItemGroup>
+
 </Project>
