extensions vc code - display Hello world component

--- a/Ultramarine.VSCodeExtension/.vscode/launch.json
+++ b/Ultramarine.VSCodeExtension/.vscode/launch.json
@@ -9,6 +9,7 @@
       "name": "Extension",
       "type": "extensionHost",
       "request": "launch",
+      "preLaunchTask": "build",
       "runtimeExecutable": "${execPath}",
       "args": ["--extensionDevelopmentPath=${workspaceFolder}"]
     },
