--- a/Ultramarine.QueryLanguage.Grammars/Ultramarine.QueryLanguage.Grammars.csproj
+++ b/Ultramarine.QueryLanguage.Grammars/Ultramarine.QueryLanguage.Grammars.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
