createProjectItem task is now functional

--- a/Ultramarine.Generators.Tests/Ultramarine.Generators.Tests.csproj
+++ b/Ultramarine.Generators.Tests/Ultramarine.Generators.Tests.csproj
@@ -20,6 +20,9 @@
     <None Update="Samples\CreateFolderTest.gen.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Samples\CreateProjectItemTest.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
