--- a/Ultramarine.VSExtension/Ultramarine.VSExtension.csproj
+++ b/Ultramarine.VSExtension/Ultramarine.VSExtension.csproj
@@ -352,6 +352,14 @@
       <Project>{82d1ce89-82ef-47ff-a702-f67c3e030de4}</Project>
       <Name>Ultramarine.Generators.Tasks</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Ultramarine.QueryLanguage.Grammars\Ultramarine.QueryLanguage.Grammars.csproj">
+      <Project>{85afd823-3966-4c16-b02c-699aa8f8d695}</Project>
+      <Name>Ultramarine.QueryLanguage.Grammars</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Ultramarine.QueryLanguage\Ultramarine.QueryLanguage.csproj">
+      <Project>{c501f3e8-d750-4e12-a020-4748008b2af3}</Project>
+      <Name>Ultramarine.QueryLanguage</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Ultramarine.Workspaces.VisualStudio\Ultramarine.Workspaces.VisualStudio.csproj">
       <Project>{596E2E43-B431-456B-9537-63570CCA0807}</Project>
       <Name>Ultramarine.Workspaces.VisualStudio</Name>
