--- a/Ultramarine.Workspaces.VisualStudio/packages.config
+++ b/Ultramarine.Workspaces.VisualStudio/packages.config
@@ -1,10 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EnvDTE" version="8.0.2" targetFramework="net461" />
-  <package id="EnvDTE100" version="10.0.3" targetFramework="net461" />
-  <package id="EnvDTE80" version="8.0.3" targetFramework="net461" />
-  <package id="EnvDTE90" version="9.0.3" targetFramework="net461" />
-  <package id="EnvDTE90a" version="9.0.3" targetFramework="net461" />
   <package id="Microsoft.Build" version="15.9.20" targetFramework="net461" />
   <package id="Microsoft.Build.Framework" version="15.9.20" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis" version="2.10.0" targetFramework="net461" />
@@ -15,9 +10,26 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.10.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.10.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.10.0" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.ComponentModelHost" version="15.8.525" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="15.6.27740" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.LanguageServices" version="2.10.0" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6071" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.16" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Setup.Configuration.Interop" version="1.16.30" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.9.28307" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6072" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.10.0" version="10.0.30320" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.11.0" version="11.0.61031" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.12.0" version="12.0.30111" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.15.0.DesignTime" version="15.0.26932" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50728" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6071" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.TextManager.Interop.8.0" version="8.0.50728" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Threading" version="15.6.31" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.6.31" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Utilities" version="15.9.28307" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.3.15" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net461" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.2" targetFramework="net461" />
   <package id="SQLitePCLRaw.core" version="1.1.2" targetFramework="net461" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.2" targetFramework="net461" />
@@ -25,6 +37,7 @@
   <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.2" targetFramework="net461" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.2" targetFramework="net461" />
   <package id="stdole" version="7.0.3302" targetFramework="net461" />
+  <package id="StreamJsonRpc" version="1.3.23" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
