--- a/Ultramarine.VSCodeExtension/package.json
+++ b/Ultramarine.VSCodeExtension/package.json
@@ -75,14 +75,16 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
-    "url-loader": "1.1.2"
+    "url-loader": "1.1.2",
+    "react-hot-loader": "^4.8.0"
   },
   "scripts": {
     "postinstall": "node ./node_modules/vscode/bin/install",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "produce": "rimraf ./build && set NODE_ENV=\"production\" && webpack --config ./webpack.vscode.js -p --progress --color",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "develop": "webpack-dev-server --config webpack.debug.js"
   },
   "eslintConfig": {
     "extends": "react-app"
