--- a/Ultramarine.VSCodeExtension/jsconfig.json
+++ b/Ultramarine.VSCodeExtension/jsconfig.json
@@ -1,13 +1,9 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es6",
-		"checkJs": true,  /* Typecheck .js files. */
-		"lib": [
-			"es6"
-		]
-	},
-	"exclude": [
-		"node_modules"
-	]
+  "compilerOptions": {
+    "baseUrl": ".",
+    "allowSyntheticDefaultImports": false,
+    "target": "es2017",
+    "jsx": "react"
+  },
+  "exclude": ["node_modules"]
 }
