--- a/Ultramarine.VSCodeExtension/package.json
+++ b/Ultramarine.VSCodeExtension/package.json
@@ -76,7 +76,8 @@
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
     "url-loader": "1.1.2",
-    "react-hot-loader": "^4.8.0"
+    "react-hot-loader": "^4.8.0",
+    "prettier": "^1.16.4"
   },
   "scripts": {
     "postinstall": "node ./node_modules/vscode/bin/install",
@@ -84,7 +85,8 @@
     "build": "node scripts/build.js",
     "produce": "rimraf ./build && set NODE_ENV=\"production\" && webpack --config ./webpack.vscode.js -p --progress --color",
     "test": "node scripts/test.js",
-    "develop": "webpack-dev-server --config webpack.debug.js"
+    "develop": "webpack-dev-server --config webpack.debug.js",
+    "prettier:check": "prettier --check src/**/*.js"
   },
   "eslintConfig": {
     "extends": "react-app"
