--- a/Ultramarine.VSCodeExtension/package.json
+++ b/Ultramarine.VSCodeExtension/package.json
@@ -77,7 +77,9 @@
     "terser-webpack-plugin": "1.2.2",
     "url-loader": "1.1.2",
     "react-hot-loader": "^4.8.0",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0"
   },
   "scripts": {
     "postinstall": "node ./node_modules/vscode/bin/install",
