--- a/Ultramarine.VSCodeExtension/.eslintrc
+++ b/Ultramarine.VSCodeExtension/.eslintrc
@@ -20,7 +20,13 @@
     "no-unreachable": "warn",
     "no-unused-vars": "warn",
     "constructor-super": "warn",
-    "valid-typeof": "warn"
+    "valid-typeof": "warn",
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx"]
+      }
+    ]
   },
   "plugins": ["import", "react", "prettier"]
 }
