--- a/Ultramarine.VSCodeExtension/package.json
+++ b/Ultramarine.VSCodeExtension/package.json
@@ -22,7 +22,8 @@
   },
   "dependencies": {
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-hot-loader": "^4.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -76,10 +77,10 @@
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
     "url-loader": "1.1.2",
-    "react-hot-loader": "^4.8.0",
     "prettier": "^1.16.4",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0"
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1"
   },
   "scripts": {
     "postinstall": "node ./node_modules/vscode/bin/install",
