--- a/Ultramarine.VSCodeExtension/.babelrc
+++ b/Ultramarine.VSCodeExtension/.babelrc
@@ -1,5 +1,6 @@
 {
   "sourceRoot": "inline",
   "retainLines": true,
-  "presets": ["@babel/preset-react"]
+  "presets": ["@babel/preset-react"],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
