--- a/Ultramarine.VSCodeExtension/package.json
+++ b/Ultramarine.VSCodeExtension/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-hot-loader": "^4.8.0"
+    "react-hot-loader": "^4.8.0",
+    "prop-types": "^15.7.2",
+    "materialize-css": "^1.0.0-rc.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -80,7 +82,9 @@
     "prettier": "^1.16.4",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1"
+    "eslint-plugin-prettier": "^3.0.1",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "node-sass": "^4.11.0"
   },
   "scripts": {
     "postinstall": "node ./node_modules/vscode/bin/install",
