--- a/Ultramarine.Workspaces.VisualStudio/Ultramarine.Workspaces.VisualStudio.csproj
+++ b/Ultramarine.Workspaces.VisualStudio/Ultramarine.Workspaces.VisualStudio.csproj
@@ -289,6 +289,7 @@
   <ItemGroup>
     <Compile Include="Comparer.cs" />
     <Compile Include="Dte.cs" />
+    <Compile Include="Elements\Dte.Project.cs" />
     <Compile Include="OutputLogger.cs" />
     <Compile Include="ProjectItemModel.cs" />
     <Compile Include="ProjectModel.cs" />
