--- a/Ultramarine.Generators.Tests/Ultramarine.Generators.Tests.csproj
+++ b/Ultramarine.Generators.Tests/Ultramarine.Generators.Tests.csproj
@@ -23,6 +23,9 @@
     <None Update="Samples\CreateProjectItemTest.gen.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Samples\IteratorTest.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
