Added StringManipulation class with methods, and tests for all of them

--- a/Ultramarine.Generators.Tests/Ultramarine.Generators.Tests.csproj
+++ b/Ultramarine.Generators.Tests/Ultramarine.Generators.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
   </ItemGroup>
@@ -17,6 +18,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Samples\StringManipulation\CaseType\StringManipulationCamelCaseTypeTest.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Samples\StringManipulation\CaseType\StringManipulationHungarianCaseTypeTest.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Samples\StringManipulation\CaseType\StringManipulationLowerCaseTypeTest.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Samples\CreateFolderTest.gen.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -27,6 +37,18 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Samples\LoadProjectItemTest.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Samples\StringManipulation\StringManipulationReplaceTest.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Samples\StringManipulation\CaseType\StringManipulationUpperCaseTypeTest.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Samples\StringManipulation\StringManipulationFormatTest.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Samples\StringManipulation\StringManipulationTest.gen.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
