workspaces nuget packages are now automatically created inside of an vs extension. nuget setup files have been added to the project.

--- a/Ultramarine.Workspaces/Ultramarine.Workspaces.csproj
+++ b/Ultramarine.Workspaces/Ultramarine.Workspaces.csproj
@@ -1,6 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+  <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
@@ -14,6 +17,8 @@
     <Copyright>Copyright Seavus 2019</Copyright>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
+	<PackageOutputPath>$(SolutionDir)Ultramarine.VSExtension\Packages</PackageOutputPath>
+
   </PropertyGroup>
 
   <ItemGroup>
