--- a/Ultramarine.Workspaces.VisualStudio/Ultramarine.Workspaces.VisualStudio.csproj
+++ b/Ultramarine.Workspaces.VisualStudio/Ultramarine.Workspaces.VisualStudio.csproj
@@ -382,7 +382,7 @@
   <Import Project="..\packages\Microsoft.VisualStudio.SDK.EmbedInteropTypes.15.0.16\build\Microsoft.VisualStudio.SDK.EmbedInteropTypes.targets" Condition="Exists('..\packages\Microsoft.VisualStudio.SDK.EmbedInteropTypes.15.0.16\build\Microsoft.VisualStudio.SDK.EmbedInteropTypes.targets')" />
   <Import Project="..\packages\Microsoft.VisualStudio.Threading.Analyzers.15.8.122\build\Microsoft.VisualStudio.Threading.Analyzers.targets" Condition="Exists('..\packages\Microsoft.VisualStudio.Threading.Analyzers.15.8.122\build\Microsoft.VisualStudio.Threading.Analyzers.targets')" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>nuget pack $(ProjectPath)
+copy "$(ProjectName).1.*.*.nupkg" "$(SolutionDir)Ultramarine.VSExtension\Packages"</PostBuildEvent>
   </PropertyGroup>
 </Project>
