--- a/Ultramarine.Generators.Tasks/Ultramarine.Generators.Tasks.csproj
+++ b/Ultramarine.Generators.Tasks/Ultramarine.Generators.Tasks.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.SqlServer.Types" Version="14.0.1016.290" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="System.Composition" Version="1.0.31" />
   </ItemGroup>
 
