--- a/Ultramarine.Generators.Tests/Ultramarine.Generators.Tests.csproj
+++ b/Ultramarine.Generators.Tests/Ultramarine.Generators.Tests.csproj
@@ -63,6 +63,9 @@
     <None Update="Samples\StringManipulation\StringManipulationTest.gen.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Samples\WebDownload\WebDownload.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
