--- a/Ultramarine.VSCodeExtension/package.json
+++ b/Ultramarine.VSCodeExtension/package.json
@@ -46,7 +46,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-hot-loader": "^4.8.0"
+    "react-hot-loader": "^4.8.0",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
