--- a/Ultramarine.Generators.SchemaBuilder/Ultramarine.Generators.SchemaBuilder.csproj
+++ b/Ultramarine.Generators.SchemaBuilder/Ultramarine.Generators.SchemaBuilder.csproj
@@ -8,10 +8,13 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.10" />
+    <PackageReference Include="NJsonSchema" Version="9.13.37" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Ultramarine.Generators.Serialization.Providers\Ultramarine.Generators.Serialization.Providers.csproj" />
     <ProjectReference Include="..\Ultramarine.Generators.Tasks.Library\Ultramarine.Generators.Tasks.Library.csproj" />
+    <ProjectReference Include="..\Ultramarine.Generators.Tasks\Ultramarine.Generators.Tasks.csproj" />
   </ItemGroup>
 
 </Project>
