--- a/Ultramarine.Generators.Tests/Ultramarine.Generators.Tests.csproj
+++ b/Ultramarine.Generators.Tests/Ultramarine.Generators.Tests.csproj
@@ -15,9 +15,19 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ultramarine.Generators.Serialization.Providers\Ultramarine.Generators.Serialization.Providers.csproj" />
+    <ProjectReference Include="..\Ultramarine.Generators.Tasks.Complex\Ultramarine.Generators.Tasks.Complex.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Samples\Importer\Generator1.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Samples\Importer\Generator2.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Samples\Importer\ImporterTest.gen.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Samples\SqlCommand\SqlCommandStoredProcedureSelectTest.gen.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
