--- a/Ultramarine.Workspaces.VisualStudio/Ultramarine.Workspaces.VisualStudio.csproj
+++ b/Ultramarine.Workspaces.VisualStudio/Ultramarine.Workspaces.VisualStudio.csproj
@@ -344,6 +344,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="T4\TransformationError.cs" />
     <Compile Include="T4\TransformationLogger.cs" />
+    <Compile Include="WorkspaceModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ultramarine.QueryLanguage\Ultramarine.QueryLanguage.csproj">
