--- a/Ultramarine.GeneratorRecipes/Ultramarine.GeneratorRecipes.csproj
+++ b/Ultramarine.GeneratorRecipes/Ultramarine.GeneratorRecipes.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="JsonSchemaTaskTemplate.tt" />
     <Content Include="JsonSchemaTemplate.tt" />
     <Content Include="TransformTask.tt" />
   </ItemGroup>
