Json Schema builder added definitions builder for complex types

--- a/Ultramarine.GeneratorRecipes/Ultramarine.GeneratorRecipes.csproj
+++ b/Ultramarine.GeneratorRecipes/Ultramarine.GeneratorRecipes.csproj
@@ -51,6 +51,14 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Ultramarine.Generators.Tasks.Library\Ultramarine.Generators.Tasks.Library.csproj">
+      <Project>{4cd4ff45-5d29-459a-bb2e-cd760a95aaf5}</Project>
+      <Name>Ultramarine.Generators.Tasks.Library</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Ultramarine.Generators.Tasks\Ultramarine.Generators.Tasks.csproj">
+      <Project>{82d1ce89-82ef-47ff-a702-f67c3e030de4}</Project>
+      <Name>Ultramarine.Generators.Tasks</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Ultramarine.Workspaces.VisualStudio\Ultramarine.Workspaces.VisualStudio.csproj">
       <Project>{596e2e43-b431-456b-9537-63570cca0807}</Project>
       <Name>Ultramarine.Workspaces.VisualStudio</Name>
