--- a/Ultramarine.Generators.SchemaBuilder/Project.gen.json
+++ b/Ultramarine.Generators.SchemaBuilder/Project.gen.json
@@ -1,8 +1,8 @@
 {
-  "$schema": "schema.json",
+  "$schema": "./schema.json",
   "description": "ProjectDescription",
   "name": "Project",
-  "tasks": [
+  "tasks": [    
     {
       "loadProjectItem": {
         "name": "loadCSharpTasks",
